--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,98 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact | Mannes & Délices</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #fffaf4;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+
+    header {
+      background-color: #8B0000;
+      color: white;
+      padding: 20px 10px;
+      text-align: center;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 12px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 30px 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .contact {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
+
+    .contact h2 {
+      color: #8B0000;
+    }
+
+    .contact p {
+      margin: 10px 0;
+    }
+
+    footer {
+      background-color: #8B0000;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
     <h1>Mannes & Délices</h1>
     <nav>
-      <a href="index.html">Accueil</a>
-      <a href="recettes.html">Recettes</a>
-      <a href="cours.html">Cours</a>
-      <a href="contact.html">Contact</a>
+      <a href="/mannes-d-lices/index.html">Accueil</a>
+      <a href="/mannes-d-lices/recettes.html">Recettes</a>
+      <a href="/mannes-d-lices/cours.html">Cours</a>
+      <a href="/mannes-d-lices/contact.html">Contact</a>
+      <a href="/mannes-d-lices/apropos.html">À propos</a>
     </nav>
   </header>
+
   <main>
-    <h2>Contacte-nous</h2>
-    <form action="mailto:mannesdelices@gmail.com" method="post" enctype="text/plain">
-      <label>Nom :<br><input type="text" name="name" required /></label><br><br>
-      <label>Email :<br><input type="email" name="email" required /></label><br><br>
-      <label>Message :<br><textarea name="message" rows="5" required></textarea></label><br><br>
-      <button type="submit">Envoyer</button>
-    </form>
+    <div class="contact">
+      <h2>Contacte-nous</h2>
+      <p>📧 <strong>Email :</strong> <a href="mailto:mannesdelices@gmail.com">mannesdelices@gmail.com</a></p>
+      <p>📞 <strong>Téléphone :</strong> <a href="tel:+2290141239272">+229 01 41 23 92 72</a></p>
+      <p>💬 <strong>WhatsApp :</strong> <a href="https://wa.me/2290152372275" target="_blank">+229 01 52 37 22 75</a></p>
+      <p>📍 Cotonou – Bénin</p>
+      <p>N’hésite pas à nous écrire pour toute question, collaboration ou inscription à nos cours !</p>
+    </div>
   </main>
+
   <footer>
-    &copy; 2025 Mannes & Délices | mannesdelices@gmail.com
+    <p>&copy; 2025 Mannes & Délices | Tous droits réservés</p>
   </footer>
+
 </body>
 </html>
