Correction des liens du menu sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 
 <head>
-<link rel="stylesheet" href="style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mannes & Délices</title>
@@ -203,13 +202,13 @@
 <body>
   <header>
     <h1>Mannes & Délices</h1>
-    <nav role="navigation" aria-label="Menu principal">
-      <a href="#" tabindex="0">Accueil</a>
-      <a href="#" tabindex="0">Recettes gratuites</a>
-      <a href="#" tabindex="0">Cours payants</a>
-      <a href="#" tabindex="0">À propos</a>
-      <a href="#" tabindex="0">Contact</a>
-    </nav>
+<nav>
+  <a href="/mannes-d-lices/index.html">Accueil</a>
+  <a href="/mannes-d-lices/recettes.html">Recettes</a>
+  <a href="/mannes-d-lices/cours.html">Cours</a>
+  <a href="/mannes-d-lices/contact.html">Contact</a>
+  <a href="/mannes-d-lices/apropos.html">À propos</a>
+</nav>
   </header>
 
   <div class="banner" role="img" aria-label="Plat cuisiné appétissant">
