Ajout boutons stylés au menu navigation

--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
   <header>
     <h1>Mannes & Délices</h1>
 <nav>
-  <a href="/mannes-d-lices/index.html">Accueil</a>
-  <a href="/mannes-d-lices/recettes.html">Recettes</a>
-  <a href="/mannes-d-lices/cours.html">Cours</a>
-  <a href="/mannes-d-lices/contact.html">Contact</a>
-  <a href="/mannes-d-lices/apropos.html">À propos</a>
+  <a class="btn-nav" href="/mannes-d-lices/index.html">Accueil</a>
+  <a class="btn-nav" href="/mannes-d-lices/recettes.html">Recettes</a>
+  <a class="btn-nav" href="/mannes-d-lices/cours.html">Cours</a>
+  <a class="btn-nav" href="/mannes-d-lices/contact.html">Contact</a>
+  <a class="btn-nav" href="/mannes-d-lices/apropos.html">À propos</a>
 </nav>
   </header>
 
