Correction des chemins d’image pour affichage GitHub Pages

--- a/index.html
+++ b/index.html
@@ -203,11 +203,26 @@
   <header>
     <h1>Mannes & Délices</h1>
 <nav>
-  <a class="btn-nav" href="/mannes-d-lices/index.html">Accueil</a>
-  <a class="btn-nav" href="/mannes-d-lices/recettes.html">Recettes</a>
-  <a class="btn-nav" href="/mannes-d-lices/cours.html">Cours</a>
-  <a class="btn-nav" href="/mannes-d-lices/contact.html">Contact</a>
-  <a class="btn-nav" href="/mannes-d-lices/apropos.html">À propos</a>
+  <a href="/mannes-d-lices/index.html" class="btn-nav cadre-legume">
+    <img src="/mannes-d-lices/images/tomate.png" alt="Tomate" class="btn-icon" />
+    Accueil
+  </a>
+  <a href="/mannes-d-lices/recettes.html" class="btn-nav cadre-fruit">
+    <img src="/mannes-d-lices/images/pomme.png" alt="Pomme" class="btn-icon" />
+    Recettes
+  </a>
+  <a href="/mannes-d-lices/cours.html" class="btn-nav cadre-ustensile">
+    <img src="/mannes-d-lices/images/fouet.png" alt="Fouet" class="btn-icon" />
+    Cours
+  </a>
+  <a href="/mannes-d-lices/contact.html" class="btn-nav cadre-patisserie">
+    <img src="/mannes-d-lices/images/rouleau.png" alt="Rouleau" class="btn-icon" />
+    Contact
+  </a>
+  <a href="/mannes-d-lices/apropos.html" class="btn-nav cadre-legume2">
+    <img src="/mannes-d-lices/images/basilic.png" alt="Feuille de basilic" class="btn-icon" />
+    À propos
+  </a>
 </nav>
   </header>
 
