--- a/index.html
+++ b/index.html
@@ -1,283 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mannes & Délices</title>
-  <meta name="description" content="Cours de cuisine en ligne - Recettes gratuites et cours payants" />
-  <meta name="author" content="Rod'Rich - Mannes & Délices" />
-  <style>
-    /* Reset basique */
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Georgia', serif;
-      background-color: #faf6f1;
-      color: #4b3b2b;
-      margin: 0;
-      line-height: 1.6;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    a {
-      color: #a0522d;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    a:hover,
-    a:focus {
-      color: #7b3e1e;
-      outline: none;
-    }
-
-    header {
-      background-color: #a0522d;
-      color: white;
-      padding: 1.25rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    header h1 {
-      font-family: 'Brush Script MT', cursive;
-      font-size: 2.5rem;
-      margin: 0;
-      user-select: none;
-    }
-
-    nav {
-      display: flex;
-      gap: 1.5rem;
-      flex-wrap: wrap;
-      margin-top: 0.5rem;
-    }
-
-    nav a {
-      font-weight: 600;
-      font-size: 1rem;
-      padding: 0.2rem 0;
-    }
-
-    .banner {
-      background: url('https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1350&q=80') no-repeat center/cover;
-      height: 320px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 2.25rem;
-      font-weight: 700;
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
-      text-align: center;
-      padding: 0 1rem;
-    }
-
-    main {
-      flex-grow: 1;
-      padding: 2rem 1rem;
-      max-width: 1200px;
-      margin: 0 auto;
-      width: 100%;
-    }
-
-    section {
-      margin-bottom: 3rem;
-    }
-
-    section h2 {
-      font-size: 2rem;
-      border-bottom: 3px solid #a0522d;
-      padding-bottom: 0.5rem;
-      margin-bottom: 1.5rem;
-      user-select: none;
-    }
-
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .card {
-      background-color: white;
-      border-radius: 0.5rem;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .card:hover,
-    .card:focus-within {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.15);
-      outline: none;
-    }
-
-    .card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      user-select: none;
-    }
-
-    .card-content {
-      padding: 1rem;
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .card-content h3 {
-      margin: 0 0 1rem 0;
-      font-size: 1.25rem;
-      color: #4b3b2b;
-      user-select: text;
-    }
-
-    .btn {
-      background-color: #a0522d;
-      color: white;
-      border: none;
-      border-radius: 0.3rem;
-      padding: 0.75rem 1.25rem;
-      font-size: 1rem;
-      cursor: pointer;
-      text-align: center;
-      user-select: none;
-      transition: background-color 0.3s ease;
-      text-decoration: none;
-      display: inline-block;
-      font-weight: 600;
-    }
-
-    .btn:hover,
-    .btn:focus {
-      background-color: #7b3e1e;
-      outline: none;
-      text-decoration: none;
-    }
-
-    footer {
-      background-color: #a0522d;
-      color: white;
-      text-align: center;
-      padding: 1.25rem 1rem;
-      user-select: none;
-      font-size: 0.9rem;
-      margin-top: auto;
-    }
-
-    footer a {
-      color: inherit;
-      text-decoration: underline;
-    }
-
-    /* Responsive adjustments */
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        margin-top: 1rem;
-        width: 100%;
-        justify-content: flex-start;
-      }
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MANNES & DÉLICES</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <header>
-    <h1>Mannes & Délices</h1>
-<nav>
-  <a href="/mannes-d-lices/index.html" class="btn-nav cadre-legume">
-    <img src="/mannes-d-lices/images/tomate.png" alt="Tomate" class="btn-icon" />
-    Accueil
-  </a>
-  <a href="/mannes-d-lices/recettes.html" class="btn-nav cadre-fruit">
-    <img src="/mannes-d-lices/images/pomme.png" alt="Pomme" class="btn-icon" />
-    Recettes
-  </a>
-  <a href="/mannes-d-lices/cours.html" class="btn-nav cadre-ustensile">
-    <img src="/mannes-d-lices/images/fouet.png" alt="Fouet" class="btn-icon" />
-    Cours
-  </a>
-  <a href="/mannes-d-lices/contact.html" class="btn-nav cadre-patisserie">
-    <img src="/mannes-d-lices/images/rouleau.png" alt="Rouleau" class="btn-icon" />
-    Contact
-  </a>
-  <a href="/mannes-d-lices/apropos.html" class="btn-nav cadre-legume2">
-    <img src="/mannes-d-lices/images/basilic.png" alt="Feuille de basilic" class="btn-icon" />
-    À propos
-  </a>
-</nav>
+    <h1>MANNES & DÉLICES</h1>
   </header>
 
-  <div class="banner" role="img" aria-label="Plat cuisiné appétissant">
-    Apprenez à cuisiner avec passion
-  </div>
+  <nav>
+    <a href="/mannes-d-lices/index.html" class="btn-nav">Accueil</a>
+    <a href="/mannes-d-lices/recettes.html" class="btn-nav">Recettes</a>
+    <a href="/mannes-d-lices/cours.html" class="btn-nav">Cours</a>
+    <a href="/mannes-d-lices/contact.html" class="btn-nav">Contact</a>
+    <a href="/mannes-d-lices/apropos.html" class="btn-nav">À propos</a>
+  </nav>
 
   <main>
-    <section aria-labelledby="recettes-gratuites">
-      <h2 id="recettes-gratuites">Recettes gratuites</h2>
-      <div class="cards">
-        <article class="card" tabindex="0" aria-label="Recette Soupe traditionnelle">
-          <img src="https://images.unsplash.com/photo-1551218808-94e220e084d2?auto=format&fit=crop&w=600&q=80" alt="Bol de soupe traditionnelle" />
-          <div class="card-content">
-            <h3>Soupe traditionnelle</h3>
-            <a href="#" class="btn" role="button">Voir la recette</a>
-          </div>
-        </article>
-        <article class="card" tabindex="0" aria-label="Recette Salade fraîcheur">
-          <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=600&q=80" alt="Assiette de salade fraîcheur" />
-          <div class="card-content">
-            <h3>Salade fraîcheur</h3>
-            <a href="#" class="btn" role="button">Voir la recette</a>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <section aria-labelledby="cours-payants">
-      <h2 id="cours-payants">Cours payants</h2>
-      <div class="cards">
-        <article class="card" tabindex="0" aria-label="Cours Maîtriser les sauces, 20 euros">
-          <img src="https://images.unsplash.com/photo-1525755662778-989d0524087e?auto=format&fit=crop&w=600&q=80" alt="Chef préparant une sauce" />
-          <div class="card-content">
-            <h3>Maîtriser les sauces</h3>
-            <a href="#" class="btn" role="button" aria-label="S'inscrire au cours Maîtriser les sauces pour 20 euros">S'inscrire - 20€</a>
-          </div>
-        </article>
-        <article class="card" tabindex="0" aria-label="Cours Techniques de pâtisserie, 30 euros">
-          <img src="https://images.unsplash.com/photo-1505253210341-48a31d25a1ca?auto=format&fit=crop&w=600&q=80" alt="Pâtisserie en préparation" />
-          <div class="card-content">
-            <h3>Techniques de pâtisserie</h3>
-            <a href="#" class="btn" role="button" aria-label="S'inscrire au cours Techniques de pâtisserie pour 30 euros">S'inscrire - 30€</a>
-          </div>
-        </article>
-      </div>
+    <section>
+      <h2>Bienvenue chez Mannes & Délices</h2>
+      <p>Explorez des recettes gastronomiques, suivez des cours en ligne, et savourez l’art culinaire avec passion et élégance.</p>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Mannes & Délices | Contact : 
-    <a href="mailto:mannesdelices@gmail.com" aria-label="Envoyer un email à Mannes & Délices">mannesdelices@gmail.com</a> | 
-    WhatsApp : <a href="https://wa.me/2290152372275" target="_blank" rel="noopener" aria-label="Contacter Mannes & Délices sur WhatsApp">+229 015 23 72 275</a> | 
-    Appel direct : <a href="tel:+2290141239272" aria-label="Appeler Mannes & Délices">+229 014 12 39 272</a>
-  </footer>
+  <p>© 2025 Mannes & Délices</p>
+  <p>
+    📧 Email : <a href="mailto:mannesdelices@gmail.com">mannesdelices@gmail.com</a><br>
+    📞 Appel : <a href="tel:+2290141239272">+229 01 41 23 92 72</a><br>
+    💬 WhatsApp : <a href="https://wa.me/2290152372275" target="_blank">+229 01 52 37 22 75</a>
+  </p>
+</footer>
 </body>
-
 </html>
