Mise à jour index et style

--- a/index.html
+++ b/index.html
@@ -3,62 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MANNES & DÉLICES - Cours & Recettes</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet" />
+  <title>Mannes & Délices - Cours de cuisine en ligne</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header>
-    <div class="container-header">
-      <h1>MANNES & DÉLICES</h1>
-      <nav>
-        <ul class="menu">
-          <li><a href="index.html" class="active">Accueil</a></li>
-          <li><a href="recettes.html">Recettes</a></li>
-          <li><a href="cours.html">Cours</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="apropos.html">À propos</a></li>
-        </ul>
-      </nav>
-    </div>
+    <h1>Mannes & Délices</h1>
   </header>
-
+  <nav>
+    <ul class="menu">
+      <li><a href="index.html" class="active">Accueil</a></li>
+      <li><a href="recettes.html">Recettes</a></li>
+      <li><a href="cours.html">Cours</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="apropos.html">À propos</a></li>
+    </ul>
+  </nav>
   <main>
-    <section class="hero">
+    <section class="welcome">
       <h2>Bienvenue sur Mannes & Délices</h2>
-      <p>Découvrez des recettes authentiques et des cours en ligne pour devenir un expert en cuisine.</p>
-      <div class="actions">
+      <p>Explorez des recettes gratuites et des cours de cuisine en ligne pour affiner vos talents culinaires.</p>
+      <div class="buttons">
         <a href="recettes.html" class="btn">Voir les recettes</a>
-        <a href="cours.html" class="btn">Accéder aux cours</a>
-      </div>
-    </section>
-
-    <section class="gallery">
-      <div class="card">
-        <img src="images/sauces-africaines.jpg" alt="Sauces africaines" />
-        <h3>Sauces africaines</h3>
-      </div>
-      <div class="card">
-        <img src="images/salades-fraiches.jpg" alt="Salades fraîches" />
-        <h3>Les salades</h3>
-      </div>
-      <div class="card">
-        <img src="images/plats-resistance.jpg" alt="Plats de résistance" />
-        <h3>Saveurs des plats de résistance</h3>
-      </div>
-      <div class="card">
-        <img src="images/desserts-gourmands.jpg" alt="Desserts gourmands" />
-        <h3>Desserts gourmands</h3>
+        <a href="cours.html" class="btn">Voir les cours</a>
       </div>
     </section>
   </main>
-
   <footer>
-    <p>Contactez-nous :</p>
-    <p>📧 <a href="mailto:mannesdelices@gmail.com">mannesdelices@gmail.com</a> | 📞 <a href="tel:+2290141239272">+229 01 41 23 92 72</a> | WhatsApp : <a href="https://wa.me/2290152372275" target="_blank" rel="noopener noreferrer">+229 01 52 37 22 75</a></p>
-    <p>&copy; 2025 Mannes & Délices. Tous droits réservés.</p>
+    <p>Contactez-nous : <a href="mailto:mannesdelices@gmail.com">mannesdelices@gmail.com</a> | Appel direct : <a href="tel:+2290141239272">+229 0141239272</a> | WhatsApp : <a href="https://wa.me/2290152372275" target="_blank" rel="noopener noreferrer">+229 0152372275</a></p>
   </footer>
-
 </body>
 </html>
