Ajout galerie images culinaires avec style pro

--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
         <a href="recettes.html" class="btn">Voir les recettes</a>
         <a href="cours.html" class="btn">Voir les cours</a>
       </div>
+<section class="gallery">
+  <div class="image-container">
+    <img src="images/sauces-africaines.jpg" alt="Sauces africaines" />
+    <p>Sauces africaines</p>
+  </div>
+  <div class="image-container">
+    <img src="images/salades.jpg" alt="Les salades" />
+    <p>Les salades</p>
+  </div>
+  <div class="image-container">
+    <img src="images/plats-resistants.jpg" alt="Saveurs des plats résistants" />
+    <p>Saveurs des plats résistants</p>
+  </div>
+  <div class="image-container">
+    <img src="images/desserts-gourmands.jpg" alt="Desserts gourmands" />
+    <p>Desserts gourmands</p>
+  </div>
+</section>
     </section>
   </main>
   <footer>
