Fix alt tag pour image plats résistants

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
   <div class="image-container">
     <img src="images/plats-resistants.jpg" alt="Saveurs des plats résistants" />
-<p>Saveurs des plats de résistances</p>
+<p>Saveurs des plats résistants</p>
   </div>
   <div class="image-container">
     <img src="images/desserts-gourmands.jpg" alt="Desserts gourmands" />
