--- a/index.html
+++ b/index.html
@@ -27,27 +27,29 @@
         <a href="recettes.html" class="btn">Voir les recettes</a>
         <a href="cours.html" class="btn">Voir les cours</a>
       </div>
- <section class="gallery">
+<section class="gallery">
+
   <div class="image-container">
-    <img src="images/sauces-africaines.jpg" alt="Sauces africaines" />
+    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAYABgAAD..." alt="Sauces africaines" />
     <p>Sauces africaines</p>
   </div>
-  
+
   <div class="image-container">
-    <img src="images/salades.jpg" alt="Les salades" />
+    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD..." alt="Les salades" />
     <p>Les salades</p>
   </div>
-  
+
   <div class="image-container">
-    <img src="images/plats-resistants.jpg" alt="Saveurs des plats résistants" />
+    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAeAB4AAD..." alt="Saveurs des plats résistants" />
     <p>Saveurs des plats résistants</p>
   </div>
-  
+
   <div class="image-container">
-    <img src="images/desserts-gourmands.jpg" alt="Desserts gourmands" />
+    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAXABcAAD..." alt="Desserts gourmands" />
     <p>Desserts gourmands</p>
   </div>
-</section>
+
+</section>  
   </main>
   <footer>
     <p>Contactez-nous : <a href="mailto:mannesdelices@gmail.com">mannesdelices@gmail.com</a> | Appel direct : <a href="tel:+2290141239272">+229 0141239272</a> | WhatsApp : <a href="https://wa.me/2290152372275" target="_blank" rel="noopener noreferrer">+229 0152372275</a></p>
