Ajout images pro avec URLs fiables

--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
 <section class="gallery">
 
   <div class="image-container">
-    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAYABgAAD..." alt="Sauces africaines" />
+    <img src="https://images.unsplash.com/photo-1613145991554-b36b53be2e7e?auto=format&fit=crop&w=600&q=80" alt="Sauces africaines" />
     <p>Sauces africaines</p>
   </div>
 
   <div class="image-container">
-    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD..." alt="Les salades" />
+    <img src="https://images.unsplash.com/photo-1551183053-bf91a1d81141?auto=format&fit=crop&w=600&q=80" alt="Les salades" />
     <p>Les salades</p>
   </div>
 
   <div class="image-container">
-    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAeAB4AAD..." alt="Saveurs des plats résistants" />
+    <img src="https://images.unsplash.com/photo-1601056553234-8c5f77aa9734?auto=format&fit=crop&w=600&q=80" alt="Saveurs des plats résistants" />
     <p>Saveurs des plats résistants</p>
   </div>
 
   <div class="image-container">
-    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAXABcAAD..." alt="Desserts gourmands" />
+    <img src="https://images.unsplash.com/photo-1505253210343-d4fd6f1b1c00?auto=format&fit=crop&w=600&q=80" alt="Desserts gourmands" />
     <p>Desserts gourmands</p>
   </div>
 
-</section>  
+</section>
   </main>
   <footer>
     <p>Contactez-nous : <a href="mailto:mannesdelices@gmail.com">mannesdelices@gmail.com</a> | Appel direct : <a href="tel:+2290141239272">+229 0141239272</a> | WhatsApp : <a href="https://wa.me/2290152372275" target="_blank" rel="noopener noreferrer">+229 0152372275</a></p>
