Refonte complète du site d'accueil Mannes & Délices

--- a/index.html
+++ b/index.html
@@ -2,57 +2,68 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mannes & Délices - Cours de cuisine en ligne</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mannes & Délices - Cours et recettes</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header>
     <h1>Mannes & Délices</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="recettes.html">Recettes</a></li>
+        <li><a href="cours.html">Cours</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="apropos.html">À propos</a></li>
+      </ul>
+    </nav>
   </header>
-  <nav>
-    <ul class="menu">
-      <li><a href="index.html" class="active">Accueil</a></li>
-      <li><a href="recettes.html">Recettes</a></li>
-      <li><a href="cours.html">Cours</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="apropos.html">À propos</a></li>
+
+  <section class="hero">
+    <h2>L'Art culinaire à portée de main</h2>
+    <p>Explore des recettes, apprends, maîtrise et savoure le monde de la cuisine professionnelle.</p>
+  </section>
+
+  <section class="gallery">
+    <div class="image-container">
+      <img src="https://images.unsplash.com/photo-1613145991554-b36b53be2e7e?auto=format&fit=crop&w=600&q=80" alt="Sauces africaines" />
+      <p>Sauces africaines</p>
+    </div>
+    <div class="image-container">
+      <img src="https://images.unsplash.com/photo-1551183053-bf91a1d81141?auto=format&fit=crop&w=600&q=80" alt="Les salades" />
+      <p>Les salades</p>
+    </div>
+    <div class="image-container">
+      <img src="https://images.unsplash.com/photo-1601056553234-8c5f77aa9734?auto=format&fit=crop&w=600&q=80" alt="Plats résistants" />
+      <p>Saveurs des plats résistants</p>
+    </div>
+    <div class="image-container">
+      <img src="https://images.unsplash.com/photo-1505253210343-d4fd6f1b1c00?auto=format&fit=crop&w=600&q=80" alt="Desserts gourmands" />
+      <p>Desserts gourmands</p>
+    </div>
+  </section>
+
+  <section class="apropos">
+    <h3>À propos de Mannes & Délices</h3>
+    <p>
+      Mannes & Délices est une plateforme dédiée à l'apprentissage de la cuisine professionnelle, mettant en avant l'excellence, la tradition culinaire, et l'innovation. Que tu sois débutant ou passionné, rejoins notre univers savoureux.
+    </p>
+  </section>
+
+  <section class="contact-info">
+    <h4>Nous contacter</h4>
+    <ul>
+      <li>📞 Appel direct : +2290141239272</li>
+      <li>💬 WhatsApp : +2290152372275</li>
+      <li>📧 Email : <a href="mailto:mannesdelices@gmail.com">mannesdelices@gmail.com</a></li>
     </ul>
-  </nav>
-  <main>
-    <section class="welcome">
-      <h2>Bienvenue sur Mannes & Délices</h2>
-      <p>Explorez des recettes gratuites et des cours de cuisine en ligne pour affiner vos talents culinaires.</p>
-      <div class="buttons">
-        <a href="recettes.html" class="btn">Voir les recettes</a>
-        <a href="cours.html" class="btn">Voir les cours</a>
-      </div>
-<section class="gallery">
+  </section>
 
-  <div class="image-container">
-    <img src="https://images.unsplash.com/photo-1613145991554-b36b53be2e7e?auto=format&fit=crop&w=600&q=80" alt="Sauces africaines" />
-    <p>Sauces africaines</p>
-  </div>
-
-  <div class="image-container">
-    <img src="https://images.unsplash.com/photo-1551183053-bf91a1d81141?auto=format&fit=crop&w=600&q=80" alt="Les salades" />
-    <p>Les salades</p>
-  </div>
-
-  <div class="image-container">
-    <img src="https://images.unsplash.com/photo-1601056553234-8c5f77aa9734?auto=format&fit=crop&w=600&q=80" alt="Saveurs des plats résistants" />
-    <p>Saveurs des plats résistants</p>
-  </div>
-
-  <div class="image-container">
-    <img src="https://images.unsplash.com/photo-1505253210343-d4fd6f1b1c00?auto=format&fit=crop&w=600&q=80" alt="Desserts gourmands" />
-    <p>Desserts gourmands</p>
-  </div>
-
-</section>
-  </main>
   <footer>
-    <p>Contactez-nous : <a href="mailto:mannesdelices@gmail.com">mannesdelices@gmail.com</a> | Appel direct : <a href="tel:+2290141239272">+229 0141239272</a> | WhatsApp : <a href="https://wa.me/2290152372275" target="_blank" rel="noopener noreferrer">+229 0152372275</a></p>
+    <p>&copy; 2025 Mannes & Délices – Tous droits réservés</p>
   </footer>
+
 </body>
 </html>
